src/test/deca/context/invalid/Uncompatible_typeunaryoperation.deca
// Description:
//    operations binaires valides
//
// Resultats:
//    Uncompatible type for unary operation
//
// Historique:
//    cree le 08/01/2023

{
    int i= 2; int r; String s; float f=1.0; boolean b =true;
    r=-s;
    r=-b;
    r=!s;
    r=!i;
    r=!f;
    r=!b;
}
